tests/paczka1/small_fuzzy/39784892.err
Error in line 5: UOQc A313 45,72
Error in line 1: NjI0 S899 97,3
Error in line 12: UOQc A313 182,6
Error in line 14: UOQc S872 58,2
